--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,8 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 julia = "1"
 
 [extras]
+SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "SafeTestsets"]
